dodanie testów jednostkowych

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <head>
 </head>
 	<meta charset="utf-8">
-	<script src="main.js"></script>
+	<script defer src="main.js"></script>
 	<link href="style.css" rel="stylesheet" type="text/css">
 <body>
-<center><h1>SKLEP INTERNETOWY</h1></center>
+<center><h1 id="tytul">Sklep Internetowy</h1></center>
 <button type="button>">koszyk</button>
 
 <div class="shadowbox">
