--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<script defer src="main.js"></script>
 	<link href="style.css" rel="stylesheet" type="text/css">
 <body>
-<center><h1 id="tytul">Sklep Internetowy</h1></center>
-<button type="button>">koszyk</button>
+<center><h1 id="tytul">Sklep Internetowy</h1>
+<button type="button" onclick="wyswietl_koszyk()">koszyk</button>
 
 <!-----------------------OKIENKO PRODUKTOWE-------------------------->
 <div class="shadowbox">
@@ -35,6 +35,8 @@
        id="skarpetki"
        class="input-radio"/>Skarpetki</label>
  </div>
+
+
  <div class="form-group">
   <p>Wybierz kolor:</p>
     <label for="czerwony">
@@ -60,6 +62,8 @@
        id="zielony"
        class="input-radio"/>Zielony</label>
  </div>
+
+
  <div class="form-group">
   <p>Wybierz rozmiar:</p>
     <label for="large">
@@ -85,11 +89,24 @@
        id="small"
        class="input-radio"/>S</label>
  </div>
+
+
   <button type="button" onclick="wyszukaj_produkt()">Szukaj</button>
-  <p id="wyszukany_produkt"></p>
+
+</div>
+
+<div class="shadowbox" id="wyszukany_produkt">
+
+
 </div>
 <!-----------------------KONIEC - OKIENKO PRODUKTOWE-------------------------->
+<!-----------------------Koszyk-------------------------->
 
+<div class="shadowbox" id="koszyk">
+
+</div>
+
+</center>
 
 </body>
 </html>
