--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link href="style.css" rel="stylesheet" type="text/css">
 <body>
 <center><h1 id="tytul">Sklep Internetowy</h1>
-<button type="button" onclick="wyswietl_koszyk()">koszyk</button>
+<button type="button" onclick="koszyk.wyswietl_koszyk()">koszyk</button>
 
 <!-----------------------OKIENKO PRODUKTOWE-------------------------->
 <div class="shadowbox">
@@ -91,7 +91,7 @@
  </div>
 
 
-  <button type="button" onclick="wyszukaj_produkt()">Szukaj</button>
+  <button type="button" onclick="produkt.wyszukaj_produkt()">Szukaj</button>
 
 </div>
 
