--- a/zamowienie.html
+++ b/zamowienie.html
@@ -29,7 +29,7 @@ Adres zamieszkania:<input name='dane' id='adres' type="text"><br>
 e-mail: <input name='dane' id='mail' type="text"><br>
 
 
-<button type="button" onclick="zamow(koszyk)">Kup</button>
+<button type="button" onclick="zamowienie.zamow(koszyk)">Kup</button>
 
 
 
